<resources>
    <string name="app_name">GerenciadoresDeLayoutApiJava</string>
    <string name="action_search">search</string>
    <string name="action_refresh">refresh</string>
    <string name="action_share">share</string>
    <string name="action_settings">settings</string>
    <string name="btn_main_table">table</string>
    <string name="btn_main_list">list</string>
    <string name="txt_login_name">name</string>
    <string name="txt_login_password">password</string>
    <string name="btn_login">login</string>
    <string name="txt_table_title">Product List</string>
    <string name="product_table_a">shirt</string>
    <string name="price_table_b">U$ 400.00</string>
    <string name="product_table_b">skin</string>
    <string name="price_table_a">U$ 300.00</string>
    <string name="product_table_c">shoes</string>
    <string name="price_table_c">U$ 1300.00</string>
    <string name="product_table_d">shirt</string>
    <string name="price_table_d">U$ 350.00</string>
    <string name="product_table_f">watchband</string>
    <string name="price_table_f">U$ 3000.00</string>
    <string name="btn_table_submit">submit</string>
    <string name="btn_table_cancel">cancel</string>
    <string name="btn_main_listAPIJava">API</string>
    <string name="btn_main_inflate">inflate</string>
    <string name="btn_inflate">inflar</string>
    <string name="txt_auto_complete_estados">estados</string>
    <string name="btn_auto_complet_submit">submit</string>
    <string name="btn_auto_complet">auto complet</string>
    <string name="txt_main_img_button">IMG BUTTON</string>
    <string name="txt_inflater">ola noob</string>
    <string name="check_img_btn_1">check-1</string>
    <string name="check_img_btn_2">check-2</string>
    <string name="img_btn_seletores">imagem com seletores</string>
    <string name="img_btn">imagem button</string>
    <string name="toogle_img_button_on">on</string>
    <string name="toogle_img_button_off">off</string>
    <string name="rd_btn_on_img_btn">sim</string>
    <string name="rd_btn_of_img_btn">nao, TT...</string>
    <string name="txt_img_btn">esta estudando?</string>
    <string name="txt_spinner_options">selecione seu anime favorito</string>
    <string name="txt_main_spinner_button">Animes</string>
    <string name="txt_spinner_spinner">titulos</string>
    <string name="txt_main_dialog_button">Dialog</string>
    <string name="txt_main_progress_bar_button">Progress Bar</string>
    <string name="txt_main_toast_button">TOAST</string>
    <string name="txt_main_alert_dialog_button">ALERT-DIALOG</string>
    <string name="txt_main_list_view_button">LIST VIEW</string>
    <string name="txt_main_list_view_customizado_dialog_button">LIST-VIEW CUSTOM</string>
    <string name="txt_main_grid_view_button">GRID-VIEW</string>
    <string name="txt_main_view_page_button">VIEW-PAGE</string>
    <string name="txt_main_gallery_button">GALLERY</string>
    <string name="txt_main_view_page_title_button">VIEW-PAGE TITLE</string>
    <string name="txt_main_image_switcher_button">IMAGE-SWITCHER</string>
    <string name="txt_main_web_view_button">WEB-VIEW</string>
    <string name="txt_main_touch_button">TOUCH</string>
    <string name="txt_progress_bar_progress">Barra de progresso</string>
    <string name="btn_progress_bar_simular_tarefa">Simular Tarefa</string>
    <string name="btn_toast_button">toast</string>
    <string name="txt_alert_dialog_button">ALERT DIALOG</string>
</resources>
