<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content">

<android.support.v7.widget.GridLayout
    android:layout_height="wrap_content" android:layout_width="match_parent"
    app:layout_column="9" app:layout_row="9">

    <Button android:id="@+id/btn_main_table"
        android:text="@string/btn_main_table"
        app:layout_row="0" app:layout_column="0"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_list"
        android:text="@string/btn_main_list"
        app:layout_row="0" app:layout_column="1"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_listAPIJava"
        android:text="@string/btn_main_listAPIJava"
        app:layout_row="1" app:layout_column="0"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_inflate"
        android:text="@string/btn_main_inflate"
        app:layout_row="1" app:layout_column="1"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_auto_complet"
        android:text="@string/btn_auto_complet"
        app:layout_row="2" app:layout_column="0"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_img_button"
        android:text="@string/txt_main_img_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="2" app:layout_column="1"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_spinner_button"
        android:text="@string/txt_main_spinner_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="3" app:layout_column="0"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_dialog_button"
        android:text="@string/txt_main_dialog_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="3" app:layout_column="1"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_progress_bar_button"
        android:text="@string/txt_main_progress_bar_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="4" app:layout_column="0"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_toast_button"
        android:text="@string/txt_main_toast_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="4" app:layout_column="1"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_alert_dialog_button"
        android:text="@string/txt_main_alert_dialog_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="5" app:layout_column="0"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_list_view_button"
        android:text="@string/txt_main_list_view_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="5" app:layout_column="1"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_list_view_customizado_button"
        android:text="@string/txt_main_list_view_customizado_dialog_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="6" app:layout_column="0"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_grid_view_button"
        android:text="@string/txt_main_grid_view_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="6" app:layout_column="1"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_gallery_button"
        android:text="@string/txt_main_gallery_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="7" app:layout_column="0"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_view_page_button"
        android:text="@string/txt_main_view_page_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="7" app:layout_column="1"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_view_page_title_button"
        android:text="@string/txt_main_view_page_title_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="8" app:layout_column="0"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_image_switcher_button"
        android:text="@string/txt_main_image_switcher_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="8" app:layout_column="1"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_web_view_button"
        android:text="@string/txt_main_web_view_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="9" app:layout_column="0"
        app:layout_columnWeight="1"/>

    <Button android:id="@+id/btn_main_touch_button"
        android:text="@string/txt_main_touch_button"
        android:layout_height="100dp" android:layout_width="0dp"
        app:layout_row="9" app:layout_column="1"
        app:layout_columnWeight="1"/>
</android.support.v7.widget.GridLayout>
</ScrollView>